Just before mapping Live connection with User Detail

--- a/IdentityWithRedis/Views/Shared/_Layout.cshtml
+++ b/IdentityWithRedis/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
         var conn;
         var chatRef;
         var notiRef = $.connection.notificationHub;
+        var onlineUsers = $.connection.onlineUsers
         $(document).ready(function () {
             //Getting UserName of Logged in user
             debugger;
@@ -74,6 +75,6 @@
 
         });
     </script>
-
+    
 </body>
 </html>
