Upto Live Connections List using Concurrent Disctionary and Hashset

--- a/IdentityWithRedis/Views/Shared/_Layout.cshtml
+++ b/IdentityWithRedis/Views/Shared/_Layout.cshtml
@@ -51,7 +51,8 @@
         var conn;
         var chatRef;
         var notiRef = $.connection.notificationHub;
-        var onlineUsers = $.connection.onlineUsers
+        var onlineUsers = $.connection.onlineUsers;
+        var onlineUserss = $.connection.chatHub;
         $(document).ready(function () {
             //Getting UserName of Logged in user
             debugger;
