--- a/IdentityWithRedis/Views/Home/LiveConnectionTest.cshtml
+++ b/IdentityWithRedis/Views/Home/LiveConnectionTest.cshtml
@@ -13,17 +13,13 @@
 @section scripts{
     <script type="text/javascript">
         $(document).ready(function () {
-            //$.connection.onlineUsers.client.connected = function () {
+            $.connection.onlineUsers.client.connected = function () {}
 
-
-
-            //}
-
-            var conn1 = $.connection.hub.start();
+            var conn = $.connection.hub.start();
             $("#show-all-connections").on("click", function () {
 
                 debugger;
-                conn1.done(function () {
+                conn.done(function () {
                     onlineUsers.server.getAllActiveConnections().done(function (connections) {
                         $.map(connections, function (item) {
                             $("#user-list").append("<li>Connection ID : " + item + "</li>");
